# python-cli-sample

./: .gitignore  README.md  pyproject.toml
src/democli/: click_sample.py  echo.py  main.py
